Closed Bug 292326 Opened 21 years ago Closed 21 years ago

Arrowscrollbox doesn't scroll on hover

Categories

(Core :: XUL, defect)

x86
Windows XP
defect
Not set
major

Tracking

()

VERIFIED FIXED

People

(Reporter: martijn.martijn, Assigned: roc)

References

()

Details

(4 keywords)

Attachments

(1 file)

When hovering over the arrows, that gets visible when the content of the arrowscrollbox is too large to fit in the window, the content doesn't get scrolled anymore.
Works with 20050428 build, fails with 20050429 build, so I think this could be a fallout from bug 240276. I've tested this with Firefox trunk builds (not with Mozilla builds), but I think it also happens with Mozilla builds.
Blocks: 240276
Flags: blocking1.8b2?
could this also cause Chatzilla randomly scrolling up ?
Chatzilla starts with all output panes anchored to the top now.
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b2) Gecko/20050429 Firefox/1.0+ this badly effects the bookmarks menu the scroll will only happen when you click on the arrow, which means you can just scroll 1 bookmark up/down per click real fun if you have a row of 200 bookmarks, not -> ?1.1
Flags: blocking-aviary1.1?
Summary: Arrowscrollbox doesn't scroll anymore. → Arrowscrollbox doesn't scroll on hover
Attached patch fixSplinter Review
This is a regression from jst's trusted-events checkin. The mouse-clicks generated by the repeating timer nsAutoRepeatButtonFrame weren't trusted events so the chrome event handlers weren't seeing them. This patch fixes that. To avoid introducing a hole where an untrusted mouse event could start a timer generating trusted mouse clicks, the synthetic clicks inhert the trustedness of the triggering mouse event.
Assignee: jag → roc
Status: NEW → ASSIGNED
Attachment #182373 - Flags: superreview?(jst)
Attachment #182373 - Flags: review?(jst)
BTW, I checked that nsAutoRepeatButtonBox is the only method that passes nsnull in aEvent to MouseClicked, although the way I've written the code is safe even if someone else does.
*** Bug 292628 has been marked as a duplicate of this bug. ***
can someone do the check-in ?
I noticed when I make my Firefox window smaller and open a long Arrowscrollbox and use the arrow keys for scrolling down AND resize the firefox window to normal size again (so the arrows will disappear) there is extra empty space on the bottom of the Arrowscrollbox. Reproduce: 1. Add http://www.tweakers.net/feeds/mixed.xml to your bookmark toolbar 2. Make Fx window a lot smaller (like 200x100 or so) until the Arrowscrollbox arrows appear. 3. Click a few times on the 'down arrow' 4. Make Fx full-screen again 5. Extra empty space is displayed below "Open in tabs" If this is not related: I would be happy to file a new bug on this.
Sebastian: it needs review first. Ger: probably not related, please file a new bug.
(In reply to comment #9) > I noticed when I make my Firefox window smaller and open a long Arrowscrollbox > and use the arrow keys for scrolling down AND resize the firefox window to > normal size again (so the arrows will disappear) there is extra empty space on > the bottom of the Arrowscrollbox. > > Reproduce: > 1. Add http://www.tweakers.net/feeds/mixed.xml to your bookmark toolbar > 2. Make Fx window a lot smaller (like 200x100 or so) until the Arrowscrollbox > arrows appear. > 3. Click a few times on the 'down arrow' > 4. Make Fx full-screen again > 5. Extra empty space is displayed below "Open in tabs" > > If this is not related: I would be happy to file a new bug on this. bug 185054 maybe ? You may want to attach the testcase there, better then what's in that bug
(In reply to comment #10) > Ger: probably not related, please file a new bug. (In reply to comment #11) > bug 185054 maybe ? > You may want to attach the testcase there, better then what's in that bug Thank you, it surely looks like 185054 indeed. Will post the testcase there.
Comment on attachment 182373 [details] [diff] [review] fix r+sr=jst, sorry for not catching this in the initial landing :(
Attachment #182373 - Flags: superreview?(jst)
Attachment #182373 - Flags: superreview+
Attachment #182373 - Flags: review?(jst)
Attachment #182373 - Flags: review+
Comment on attachment 182373 [details] [diff] [review] fix Fixes scrolling menu regression
Attachment #182373 - Flags: approval1.8b2?
(In reply to comment #14) > (From update of attachment 182373 [details] [diff] [review] [edit]) > Fixes scrolling menu regression > Autoscroll arrows appear in the right-click context menu that aren't required. Does your patch address this? Mozilla/5.0 (Windows; U; Win95; en-US; rv:1.8b2) Gecko/20050504 Firefox/1.0+ 05:38PDT Beast build
Attachment #182373 - Flags: approval1.8b2? → approval1.8b2+
checked in. Fred: this won't fix that. I don't see that problem myself. Please file a new bug.
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b2) Gecko/20050504 Firefox/1.0+ 18:08 pdt confirming this fixes the scrolling in bookmarks
(In reply to comment #5) >This patch fixes that. To avoid introducing a hole where an untrusted mouse >event could start a timer generating trusted mouse clicks, the synthetic clicks >inhert the trustedness of the triggering mouse event. Wouldn't it have been easier not to start the timer for an untrusted mouse move?
I think this bug needs marked as fixed/Resolved. Can someone with the proper permissions do that?
Right, thanks. Neil: it would have been marginally easier, at the cost of disabling this element in remote XUL apps.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Flags: blocking1.8b2?
Verified FIXED using the testcase at http://www.xulplanet.com/tutorials/xultu/examples/ex_menuscroll_1.xul with build 2005-05-16-06 on Windows XP Seamonkey trunk.
Status: RESOLVED → VERIFIED
Flags: blocking1.7.9+
Flags: blocking-aviary1.0.5+
Comment on attachment 182373 [details] [diff] [review] fix Please check this in on the Aviary branch for 1.0.5. a=jay
Attachment #182373 - Flags: approval-aviary1.0.5+
Whiteboard: need branch landing
Dan, can you check this in for me? I don't currently have a 1.0.5 tree or watch the tinderboxen
Flags: blocking-aviary1.1? → blocking-aviary1.1+
Incorporated into the aviary/1.7 port of bug 289940
Fix checked into mozilla1.7 and aviary1.0.1 branches
Whiteboard: need branch landing
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: