Bug 292326. Make events coming from the repeating timer in nsAutoButtonBoxFrame be trusted if the original mouse click was trusted. r+sr=jst,a=asa